# skytab-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASES.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: package-local.sh  update-csv-fixtures.sh
src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mcp_server.rs  output.rs  read_api.rs  update.rs
tests/: csv_schema_golden.rs  mcp_tools_list.rs  update_cli.rs
tests/fixtures/csv/: hourly_sales.expected.csv  hourly_sales.input.json  insights_daily_brief.expected.csv  insights_daily_brief.input.json  insights_labor_vs_sales.expected.csv  insights_labor_vs_sales.input.json  insights_payment_mix.expected.csv  insights_payment_mix.input.json  payments_transactions.expected.csv  payments_transactions.input.json  payroll.expected.csv  payroll.input.json  timeclock_shifts.expected.csv  timeclock_shifts.input.json
tests/fixtures/read_api/: payroll_report_response.json  till_transaction_report_response.json  timeclock_shifts.json
