[package]
name = "skytab-cli"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for interacting with the SkyTab API"
repository = "https://github.com/lukasmurdock/skytab-cli"
license = "MIT"
readme = "README.md"
keywords = ["cli", "skytab", "api"]
categories = ["command-line-utilities"]

[[bin]]
name = "skytab"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
toml = "0.9.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
